<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Student">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="always" />
    <item android:id="@+id/blood" android:title="@string/blood"
        android:orderInCategory="150" android:showAsAction="never"/>
    <item android:id="@+id/handbook" android:title="@string/handbook"
          android:orderInCategory="200" android:showAsAction="never"/>
    <item android:id="@+id/schedule" android:title="@string/schedule"
        android:orderInCategory="300" android:showAsAction="never"/>
    <item android:id="@+id/USletterRot" android:title="@string/us_letter_rot"
        android:orderInCategory="400" android:showAsAction="never"/>
    <item android:id="@+id/asbCal" android:title="@string/asb_cal_event"
        android:orderInCategory="500" android:showAsAction="never"/>
    <item android:id="@+id/masterCal" android:title="@string/master_cal"
        android:orderInCategory="600" android:showAsAction="never"/>
    <item android:id="@+id/MSletterRot" android:title="@string/ms_letter_rot"
        android:orderInCategory="700" android:showAsAction="never"/>
    <item android:id="@+id/studentCouncil" android:title="@string/ms_student_con"
        android:orderInCategory="800" android:showAsAction="never"/>
    <item android:id="@+id/maps" android:title="@string/map"
        android:orderInCategory="900" android:showAsAction="never"/>
    <item android:id="@+id/zeroPeriod" android:title="Zero Period"
        android:showAsAction="always"/>
</menu>
